--- a/kuberos/templates/krb5-conf.yaml
+++ b/kuberos/templates/krb5-conf.yaml
@@ -16,7 +16,7 @@ data:
      admin_server = CONSOLE
 
     [libdefaults]
-     default_realm = {{ .Values.default_realm }}
+     default_realm = {{ .Values.krb5.default_realm | upper }}
      dns_lookup_realm = {{ .Values.krb5.lookup_realm }}
      dns_lookup_kdc = {{ .Values.krb5.lookup_kdc }}
      rdns = {{ .Values.krb5.rdns }}
@@ -27,17 +27,25 @@ data:
      permitted_enctypes = {{ .Values.krb5.enc_types }}
 
     [realms]
-{{- range $key, $value := .Values.krb5.realms }}
-     FOO.COM = {
-      kdc = kdc.default.svc.cluster.local:88
-      master_kdc = kdc.default.svc.cluster.local:88
-      admin_server = kadmin.default.svc.cluster.local:749
+{{- range $key, $value := .Values.realms }}
+     {{ $key | upper }} = {
+      kdc = {{ template "kerberos.fullname" }}-kdc.{{ $.Release.Namespace }}.svc.cluster.local:{{ $.Values.kdc.udp.port }}
+      master_kdc = {{ template "kerberos.fullname" }}-kdc.{{ $.Release.Namespace }}.svc.cluster.local:{{ $.Values.kdc.udp.port }}
+      admin_server = {{ template "kerberos.fullname" }}-kadmin.{{ $.Release.Namespace }}.svc.cluster.local:749
       default_domain = cluster.local
-     ; pkinit_anchors = FILE:/path/to/kdc-ca-bundle.pem
-     ; pkinit_pool = FILE:/path/to/ca-bundle.pem
+{{- if $value.krb5_extra_configs }}
+{{ $value.krb5_extra_configs | trim | indent 6 }}
+{{- end}}
      }
 {{- end }}
 
     [domain_realm]
-     .cluster.local = FOO.COM
-     foo.com = FOO.COM
+{{- range $key, $value := .Values.realms }}
+     .cluster.local = {{ $key | upper }}
+     {{ $key }} = {{ $key | upper }}
+{{- if $value.extra_domains }}
+{{- range $item := $value.extra_domains }}
+     {{ $item }} = {{ $key | upper }}
+{{- end }}
+{{- end }}
+{{- end }}
