--- a/kuberos/templates/kerb-admin-crb.yaml
+++ b/kuberos/templates/kerb-admin-crb.yaml
@@ -1,14 +1,19 @@
+{{- if .Values.serviceAccount.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: kerberos-admin
+  name: {{ template "kerberos.serviceAccountName" . }}
   labels:
-    component: kdc
+    app: {{ template "kerberos.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
 subjects:
   - kind: ServiceAccount
-    name: kerberos-admin
-    namespace: default
+    name: {{ template "kerberos.serviceAccountName" . }}
+    namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: ClusterAdmin
+{{- end -}}
