--- a/kuberos/templates/kerb-db-pvc.yaml
+++ b/kuberos/templates/kerb-db-pvc.yaml
@@ -1,13 +1,18 @@
+{{- if .Values.kdc.persistence.enabled -}}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: kerberos-db
+  name: {{ .Values.kdc.persistence.name }}
   labels:
-    component: kdc
+    app: {{ template "kerberos.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: standard
+  storageClassName: {{ .Values.kdc.persistence.storageClass }}
   resources:
     requests:
-      storage: 1Gi
+      storage: {{ .Values.kdc.persistence.size }}
+{{- end -}}
