--- a/kuberos/templates/kadmin-service.yaml
+++ b/kuberos/templates/kadmin-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "kerberos.fullname" }}-kadmin
+  name: {{ template "kerberos.fullname" . }}-kadmin
   labels:
     app: {{ template "kerberos.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
