--- a/kuberos/templates/kdc-statefulset.yaml
+++ b/kuberos/templates/kdc-statefulset.yaml
@@ -7,7 +7,7 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
     component: kdc
-  name: {{ template "kerberos.fullname" }}-kdc
+  name: {{ template "kerberos.fullname" . }}-kdc
 spec:
   selector:
     matchLabels:
@@ -48,8 +48,8 @@ spec:
           value: {{ .Values.krb5.default_realm | upper }}
         - name: MASTER_PASSWORD
           valueFrom:
-            secretRefKey:
-              name: {{ template "kerberos.fullname" }}
+            secretKeyRef:
+              name: {{ template "kerberos.fullname" . }}
               key: master-password
         volumeMounts:
         - mountPath: /var/kerberos/krb5kdc
@@ -120,10 +120,10 @@ spec:
       volumes:
       - name: kdc-conf
         configMap:
-          name: {{ template "kerberos.fullname" }}-kdc-config
+          name: {{ template "kerberos.fullname" . }}-kdc-config
       - name: krb5-conf
         configMap:
-          name: {{ template "kerberos.fullname" }}-krb5-config
+          name: {{ template "kerberos.fullname" . }}-krb5-config
       - name: {{ .Values.kdc.persistence.name }}
 {{- if .Values.kdc.persistence.enabled }}
         persistentVolumeClaim:
