--- a/kuberos/templates/krb5-conf.yaml
+++ b/kuberos/templates/krb5-conf.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "kerberos.fullname" }}-krb5-config
+  name: {{ template "kerberos.fullname" . }}-krb5-config
   labels:
     app: {{ template "kerberos.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
@@ -29,9 +29,9 @@ data:
     [realms]
 {{- range $key, $value := .Values.realms }}
      {{ $key | upper }} = {
-      kdc = {{ template "kerberos.fullname" }}-kdc.{{ $.Release.Namespace }}.svc.cluster.local:{{ $.Values.kdc.udp.port }}
-      master_kdc = {{ template "kerberos.fullname" }}-kdc.{{ $.Release.Namespace }}.svc.cluster.local:{{ $.Values.kdc.udp.port }}
-      admin_server = {{ template "kerberos.fullname" }}-kadmin.{{ $.Release.Namespace }}.svc.cluster.local:749
+      kdc = {{ template "kerberos.fullname" $ }}-kdc.{{ $.Release.Namespace }}.svc.cluster.local:{{ $.Values.kdc.udp.port }}
+      master_kdc = {{ template "kerberos.fullname" $ }}-kdc.{{ $.Release.Namespace }}.svc.cluster.local:{{ $.Values.kdc.udp.port }}
+      admin_server = {{ template "kerberos.fullname" $ }}-kadmin.{{ $.Release.Namespace }}.svc.cluster.local:749
       default_domain = cluster.local
 {{- if $value.krb5_extra_configs }}
 {{ $value.krb5_extra_configs | trim | indent 6 }}
